# pucrs-devboard-lpc2378

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: general.h  gpio.h  lcd_16x2.h  led.h  time.h
src/: CMakeLists.txt  base.c  gpio.c  lcd_16x2.c  led.c  main.c  time.c
